<resources>
    <!-- firebase login -->
    <string name="signed_out">Signed Out</string>

    <string name="app_name">Location Reminders</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the\nLocation Reminder\nApp</string>
    <string name="login">Login</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="location_name">this location</string>
...
    <string name="save_reminder">Save reminder</string>

    <!-- buttons -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reminder_details">Reminder Details</string>
    <string name="map">map</string>

    <string name="anchor_char">x</string>
    <string name="title">Title:</string>
    <string name="dismiss">Dismiss</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="map_user_prompt">Select a point of interest to create a reminder.</string>
    <string name="error_add_reminders">Add some reminders first…</string>

</resources>

