<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- adapted from https://github.com/firebase/quickstart-android -->
    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".authentication.AuthenticationActivity">

        <ImageView
            android:id="@+id/icon"
            style="@style/ThemeOverlay.LocationReminderIcon"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/location_reminder_icon"
            android:src="@drawable/location_reminder" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/welcome_to_the_location_reminder_app"
            android:theme="@style/ThemeOverlay.MyTitleText" />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out" />

        <TextView
            android:id="@+id/auth_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin_large"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:text="@string/login"
            android:textAlignment="center"/>

    </LinearLayout>

</layout>